--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-<title>Jinghan Ke - Research homepage</title>
-<link rel="icon" href="AboutPageAssets/images/hi.png" type="image/x-icon">
-<link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+	<meta charset="utf-8">
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+	<title>Jinghan Ke - Research homepage</title>
+	<link rel="icon" href="AboutPageAssets/images/hi.png" type="image/x-icon">
+	<link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-	
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page.-->
-<!--<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>-->
+	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+		
+	<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page.-->
+	<!--<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>-->
+
+	<link rel="preconnect" href="https://www.youtube.com">
+	<link rel="preconnect" href="https://i.ytimg.com">
+	<link rel="dns-prefetch" href="https://www.youtube.com">
+	<link rel="dns-prefetch" href="https://i.ytimg.com">
 </head>
 
 <body>
@@ -135,8 +140,8 @@ Note: if wanna wechat, activate html-related content and js!
 </section>
 -->
 
-	
-<!-- content -->
+
+
 <section class="mainContent"> 
   <!-- NEWS -->
 <!--
@@ -155,7 +160,7 @@ Note: if wanna wechat, activate html-related content and js!
     </div>
   </section>
 -->
-	
+	<!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
 	<br><br>
 	<!-- PUBLICATIONS -->
 	<section class="section2">
@@ -168,9 +173,9 @@ Note: if wanna wechat, activate html-related content and js!
 			<ion-icon name="school-outline"></ion-icon>
 		  </span>
 		</h2>
-
-<!--		<hr class="sectionTitleRule">-->
 		<hr class="sectionTitleRule2">
+		<!-- <hr class="sectionTitleRule"> -->
+		
 
 		<!-- Angles Don't Lie -->
 
@@ -293,24 +298,107 @@ Note: if wanna wechat, activate html-related content and js!
 				  </article>
 		</div>
 	</section>
+
+	<!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
+	<br><br>
+	<!-- Videos -->
+	<section class="section2">
+		<h2 class="sectionTitle">
+			Video Editing | 
+			<a href="https://www.youtube.com/@JinghanKe" target="_blank">
+			Youtube
+			</a>
+			<span class="icon">
+			<ion-icon name="logo-youtube"></ion-icon>
+			</span>
+		</h2>
+		<hr class="sectionTitleRule2">
+
+		<!-- YouTube PlayList -->
+		<div class="yt-shell" data-init="youtube-gallery">
+        <!-- 左侧播放清单 -->
+        <aside class="yt-playlist" aria-label="PlayList">
+
+			<div class="yt-item active" data-ytid="sOQOr8LipUM" tabindex="0" role="button" aria-label="play-travel-02">
+				<img src="https://i.ytimg.com/vi/sOQOr8LipUM/mqdefault.jpg" alt="" loading="lazy">
+				<div class="yt-meta">
+				<h4>Solo Travel</h4>
+				<div class="sub">Demo Channel • 0:20</div>
+				</div>
+			</div>
+
+			<div class="yt-item" data-ytid="PDsFZHfI_Pc" tabindex="0" role="button" aria-label="play-travel-01">
+				<img src="https://i.ytimg.com/vi/PDsFZHfI_Pc/mqdefault.jpg" alt="" loading="lazy">
+				<div class="yt-meta">
+				<h4>Night City -  Lantern Festival </h4>
+				<div class="sub">Demo Channel • 1:00</div>
+				</div>
+			</div>
+
+		    <div class="yt-item" data-ytid="er05Yg0_Y2c" tabindex="0" role="button" aria-label="play-paper-01">
+				<img src="https://i.ytimg.com/vi/er05Yg0_Y2c/mqdefault.jpg" alt="" loading="lazy">
+				<div class="yt-meta">
+				<h4>Dobi-SVD ICLR 2025</h4>
+				<div class="sub">Demo Channel • 1:32</div>
+            	</div>
+			</div>
+          
+        </aside>
+
+        <!-- 右侧主播放器 -->
+        <section class="yt-player-wrap" aria-label="main player">
+          <div class="yt-player"></div>
+        </section>
+      </div>
+
+	</section>
+
+
 </section>
 <br><br>
 
-	<div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-		<h2 class="sectionTitle">Drag Left &lt;- </h2>
-	    <img class="image" src="AboutPageAssets/images/gallery/1.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/XA.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/BJ.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/4.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/BJ4.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/duoduo.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/JZ2.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/13.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/3.jpg" draggable="false" />
-		<img class="image" src="AboutPageAssets/images/gallery/2.jpg" draggable="false" />
-	</div>
+
+<!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
+<div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+	<h2 class="sectionTitle">Drag Left &lt;- </h2>
+	<img class="image" src="AboutPageAssets/images/gallery/1.jpg" draggable="false" />
+	<img class="image" src="AboutPageAssets/images/gallery/BJ.jpg" draggable="false" />
+	<img class="image" src="AboutPageAssets/images/gallery/duoduo.jpg" draggable="false" />
+	<img class="image" src="AboutPageAssets/images/gallery/WH.png" draggable="false" />
+	<img class="image" src="AboutPageAssets/images/gallery/4.jpg" draggable="false" />
+	<img class="image" src="AboutPageAssets/images/gallery/JZ2.jpg" draggable="false" />
+	<img class="image" src="AboutPageAssets/images/gallery/13.jpg" draggable="false" />
+	<img class="image" src="AboutPageAssets/images/gallery/3.jpg" draggable="false" />
+	<img class="image" src="AboutPageAssets/images/gallery/2.jpg" draggable="false" />
+	<img class="image" src="AboutPageAssets/images/gallery/XA.jpg" draggable="false" />
+</div>
+
+<!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<section class="writing dropcap">
+	<p>
+		When I'm not doing research, I like to collect rare experiences and skills. 
+		For example, I once spent eight days <a class="link-mark" href="AboutPageAssets/images/gallery/HN.png" target="_blank">cycling solo around Hainan Island—about 1,000 km</a>—
+		and I can perform Chinese sword dance<a class="link-swipe ext" href="https://www.bilibili.com/video/BV1MQ4y1U7Bt/?share_source=copy_web&vd_source=ac85c591cc652dd3da2697858beb9027" target="_blank" rel="noopener noreferrer"> (intro)</a>. 
+	</p>
+	<p>
+		If I have more free time, being “on the road” is my default: I wander through the corners of different cities and 
+		watch how people live; there are always unexpected people and moments around the next turn.
+	</p>
+	<p>
+		In truth, I mostly remain ignorant. Reading as I traveled a few years ago, after visiting thirty or forty cities, I realized I still don't 
+		understand my own country. Likewise—even if one day I visit a hundred countries, I still wouldn't claim to understand 
+		this planet; and in some farther future, even if I visit a hundred Earth-like planets, I still wouldn't claim to understand the universe.
+	</p>
+</section>
 
 
+<!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
 <footer>
   <hr>
   <p class="footerDisclaimer">Feel free to download this website's <a href="https://github.com/Ah-miu/Ah-miu.github.io" class="prof-link" target="_blank">source code</a>, just add a link back to my website.</p>
