--- a/index.html
+++ b/index.html
@@ -374,13 +374,8 @@ Note: if wanna wechat, activate html-related content and js!
 </div>
 
 <!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<section class="writing dropcap">
+
+<section class="writing dropcap" style="margin-top: 250px;">
 	<p>
 		When I'm not doing research, I like to collect rare experiences and skills. 
 		For example, I once spent eight days <a class="link-mark" href="AboutPageAssets/images/gallery/HN.png" target="_blank">cycling solo around Hainan Island—about 1,000 km</a>—
