fix gallery bug

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Note: if wanna wechat, activate html-related content and js!
 		  <p>Previously, I worked at <a href="https://nus.edu.sg/" class="prof-link" target="_blank">NUS</a> LinS Lab with <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>. I received my bachelor's degree from <a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">University of Science and Technology of China</a>.</p>
 -->
 		  
-		  <p>I am a CS Ph.D. student (25Fall) at <a href="https://www.utexas.edu/" class="prof-link" target="_blank">UT Austin</a>, co-advised by <a href="https://www.cs.utexas.edu/~huangqx/" class="prof-link" target="_blank">Prof. Qixing Huang</a> and <a href="https://www.ece.utexas.edu/people/faculty/atlas-wang" class="prof-link" target="_blank">Prof. Atlas Wang</a>.</p>
+		  <p>I am a CS Ph.D. student (25Fall) at <a href="https://www.utexas.edu/" class="prof-link" target="_blank">UT Austin</a>, co-advised by <a href="https://scholar.google.com/citations?user=pamL_rIAAAAJ&hl=en&oi=ao" class="prof-link" target="_blank">Prof. Qixing Huang</a> and <a href="https://scholar.google.com/citations?user=pxFyKAIAAAAJ&hl=en" class="prof-link" target="_blank">Prof. Atlas Wang</a>.</p>
 
 
 		  <p>Previously, I was a research assistant at <a href="https://www.berkeley.edu/" class="prof-link" target="_blank">UC Berkeley</a>, working with <a href="https://people.eecs.berkeley.edu/~kanazawa/" class="prof-link" target="_blank">Prof. Angjoo Kanazawa</a>, <a href="https://people.eecs.berkeley.edu/~keutzer/" class="prof-link" target="_blank">Prof. Kurt Keutzer</a>, and <a href="https://me.berkeley.edu/people/masayoshi-tomizuka/" class="prof-link" target="_blank">Prof. Masayoshi Tomizuka</a>. Prior to that, I worked at <a href="https://nus.edu.sg/" class="prof-link" target="_blank">NUS</a> under <a href="https://linsats.github.io" class="prof-link" target="_blank">Prof. Lin Shao</a>. I received my bachelor's degree from the <a href="https://en.ustc.edu.cn/" class="prof-link" target="_blank">USTC</a>.</p>
@@ -204,7 +204,7 @@ Note: if wanna wechat, activate html-related content and js!
 				</h4>
 			  <div class="btn-contaniner">
 				  <div class="btn"><a href="https://arxiv.org/abs/2506.02281" target="_blank">Paper</a></div>
-				  <!-- <div class="btn"><a href="" target="_blank">Page</a></div> -->
+				  <div class="btn"><a href="https://neurips.cc/media/PosterPDFs/NeurIPS%202025/118660.png" target="_blank">Poster</a></div>
 				  <div class="btn"><a href="https://github.com/wangqinsi1/GAINRL" target="_blank">Code</a></div>
 		 		</div>
 		  </article>
@@ -225,14 +225,14 @@ Note: if wanna wechat, activate html-related content and js!
 		  </div>
 		  <article class="section2Content">
 		    <h2 class="sectionContentTitle" style="color: rgba(15,78,133,1);">Dobi-SVD: Differentiable SVD for LLM Compression and Some New Perspectives</h2>
-			  <h3 class="sectionContentSubTitle" style="color: rgba(148,167,217,1);">
-				  <a href="https://wangqinsi1.github.io/" target="_blank" style="color: rgba(148,167,217,1);">Wang Qinsi*</a>, 
+			  <h3 class="sectionContentSubTitle" style="color: rgba(15,78,133,0.8);">
+				  <a href="https://wangqinsi1.github.io/" target="_blank" style="color: rgb(116, 140, 202);">Wang Qinsi*</a>, 
 				  <strong style="color: rgb(255,255,255);">Jinghan Ke*</strong>, 
-				  <a href="https://me.berkeley.edu/people/masayoshi-tomizuka/" target="_blank" style="color: rgba(148,167,217,1);">Masayoshi Tomizuka</a>,
-				  <a href="https://ece.duke.edu/people/yiran-chen/" target="_blank" style="color: rgba(148,167,217,1);">Yiran Chen</a>,
-				  <a href="https://people.eecs.berkeley.edu/~keutzer/" target="_blank" style="color: rgba(148,167,217,1);">Kurt Keutzer</a>,
-				  <a href="https://www.chenfengx.com/" target="_blank" style="color: rgba(148,167,217,1);">Chenfeng Xu<sup>&#x271D;</sup></a>
-				  (* indicate equal contribution. Order is decided by coin flip. <sup>&#x271D;</sup> denotes corresponding author.)</h3>
+				  <a href="https://me.berkeley.edu/people/masayoshi-tomizuka/" target="_blank" style="color: rgba(116, 140, 202,1);">Masayoshi Tomizuka</a>,
+				  <a href="https://ece.duke.edu/people/yiran-chen/" target="_blank" style="color: rgba(116, 140, 202,1);">Yiran Chen</a>,
+				  <a href="https://people.eecs.berkeley.edu/~keutzer/" target="_blank" style="color: rgba(116, 140, 202,1);">Kurt Keutzer</a>,
+				  <a href="https://www.chenfengx.com/" target="_blank" style="color: rgba(116, 140, 202,1);">Chenfeng Xu<sup>&#x271D;</sup></a>
+				  (* equal contribution. Order is decided by coin flip. <sup>&#x271D;</sup> corresponding author.)</h3>
 			  	<h4 class="sectionContentSubTitle" style="color: rgba(115,145,201,1);">International Conference on Learning Representations (<strong>ICLR</strong>) 2025</h4>
 			  <div class="btn-contaniner">
 				  <div class="btn"><a href="https://arxiv.org/abs/2502.02723" target="_blank">Paper</a></div>
@@ -255,7 +255,7 @@ Note: if wanna wechat, activate html-related content and js!
 		  </div>
 		  <article class="section2Content">
 		    <h2 class="sectionContentTitle" >MathNAS: If Blocks Have a Role in Mathematical  Architecture Design</h2>
-			  <h3 class="sectionContentSubTitle"><a href="https://wangqinsi1.github.io/" target="_blank">Wang Qinsi*</a>, <strong style="color: rgb(246,251,255);">Jinghan Ke*</strong>, ... (* indicate equal contribution)</h3>
+			  <h3 class="sectionContentSubTitle"><a href="https://wangqinsi1.github.io/" target="_blank">Wang Qinsi*</a>, <strong style="color: rgb(246,251,255);">Jinghan Ke*</strong> (* equal contribution)</h3>
 			  	<h4 class="sectionContentSubTitle">Neural Information Processing Systems (<strong>NeurIPS</strong>) 2023</h4>
 			  <div class="btn-contaniner">
 				  <div class="btn"><a href="https://openreview.net/pdf?id=e1l4ZYprQH" target="_blank">PDF</a></div>
@@ -353,29 +353,29 @@ Note: if wanna wechat, activate html-related content and js!
 
 	</section>
 
-
 </section>
-<br><br>
 
 
 <!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
-<div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-	<h2 class="sectionTitle">Drag Left &lt;- </h2>
-	<img class="image" src="AboutPageAssets/images/gallery/1.jpg" draggable="false" />
-	<img class="image" src="AboutPageAssets/images/gallery/BJ.jpg" draggable="false" />
-	<img class="image" src="AboutPageAssets/images/gallery/duoduo.jpg" draggable="false" />
-	<img class="image" src="AboutPageAssets/images/gallery/WH.png" draggable="false" />
-	<img class="image" src="AboutPageAssets/images/gallery/4.jpg" draggable="false" />
-	<img class="image" src="AboutPageAssets/images/gallery/JZ2.jpg" draggable="false" />
-	<img class="image" src="AboutPageAssets/images/gallery/13.jpg" draggable="false" />
-	<img class="image" src="AboutPageAssets/images/gallery/3.jpg" draggable="false" />
-	<img class="image" src="AboutPageAssets/images/gallery/2.jpg" draggable="false" />
-	<img class="image" src="AboutPageAssets/images/gallery/XA.jpg" draggable="false" />
+<div class="gallery-container" style="margin-top: -200px;">
+	<div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+		<h2 class="sectionTitle">Drag Left &lt;- </h2>
+		<img class="image" src="AboutPageAssets/images/gallery/1.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/BJ.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/duoduo.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/WH.png" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/4.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/JZ2.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/13.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/3.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/2.jpg" draggable="false" />
+		<img class="image" src="AboutPageAssets/images/gallery/XA.jpg" draggable="false" />
+	</div>
 </div>
 
 <!-- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
 
-<section class="writing dropcap" style="margin-top: 250px;">
+<section class="writing dropcap" style="margin-top: 50px;">
 	<p>
 		When I'm not doing research, I like to collect rare experiences and skills. 
 		For example, I once spent eight days <a class="link-mark" href="AboutPageAssets/images/gallery/HN.png" target="_blank">cycling solo around Hainan Island—about 1,000 km</a>—
